...
            fontWeight = FontWeight.Normal,
            style = MaterialTheme.typography.bodyMedium,
            color = CharcoalGrey,
            modifier = Modifier.padding(start = 24.dp, end = 24.dp, bottom = 40.dp, top = 40.dp),
            textAlign = TextAlign.Center,
        )
        NaButton(textButton = "Create my bra", onClick = onExpectationsPageBodyButtonClick)
    }
}

