...
        Button(
            onClick = onClick,
            modifier = Modifier.fillMaxWidth().height(48.dp).padding(top = 10.dp),
            shape = RoundedCornerShape(5.dp),
            colors = ButtonDefaults.buttonColors(containerColor = Orangevibrant, contentColor = Color.White)
        ) {
            Text("Let's begin")
        }
    }
}

@Composable
fun ExpectationsPageBody(onBackClick: () -> Unit, onBeginClick: () -> Unit) {
...
