...
@Composable
fun HeaderText() {
    Column(
        modifier = Modifier.padding(vertical = 90.dp, horizontal = 50.dp)
    ) {
        Text(
            text = "Upper circumference",
            fontSize = 25.sp,
            fontWeight = Bold,
            fontFamily = Monospace
        )
        Spacer(modifier = Modifier.height(20.dp))
        Text(
...
